force-app/main/default/objects/Document_Upload_Config__mdt/Document_Upload_Config__mdt.object-meta.xml
<CustomObject>
    <label>Document Upload Config</label>
    <pluralLabel>Document Upload Configs</pluralLabel>
</CustomObject>