force-app/main/default/objects/Document_Upload_Config__mdt/fields/Mandatory_for_OV_Approval__c.field-meta.xml
<CustomField>
    <fullName>Mandatory_for_OV_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mandatory for OV Approval</label>
    <type>Checkbox</type>
</CustomField>