force-app/main/default/objects/Document_Upload_Config__mdt/fields/Object_Level__c.field-meta.xml
<CustomField>
    <fullName>Object_Level__c</fullName>
    <label>Object Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quote</fullName>
                <default>true</default>
                <label>Quote</label>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>