force-app/main/default/objects/Document_Upload_Config__mdt/fields/Product_Codes__c.field-meta.xml
<CustomField>
    <fullName>Product_Codes__c</fullName>
    <label>Product Codes</label>
    <type>TextArea</type>
</CustomField>